<resources>
    <string name="app_name">HomePharmacy</string>
    <string name="companyName">Home Pharmacy</string>
    <string name="loginv">Login</string>
    <string name="htphone">Phone Number</string>
    <string name="htpass">Password</string>
    <string name="loginbutton">Login</string>
    <string name="regLink">Create An Account</string>
    <string name="fName">First Name</string>
    <string name="newAcc">Create An Account</string>
    <string name="passhint">Password must be 5 - 10 Characters</string>
    <string name="Adpro">Add Product</string>
    <string name="name1">Name:</string>
    <string name="des1">Description:</string>
    <string name="price1">Price:</string>
    <string name="photo1">Photo:</string>
    <string name="adimg">Add Image</string>
    <string name="addpro">ADD</string>
    <string name="updatepro">UPDATE</string>
    <string name="deletepro">DELETE</string>
    <string name="phone1">Phone:</string>
    <string name="password1">Password:</string>
    <string name="Adcus">Customer Handling</string>
    <string name="imgContent">Product Image</string>
    <string name="pid">PID</string>
    <string name="cid">CID</string>
    <string name="switch101">Remember Me</string>
    <string name="choose_file">Choose File</string>
    <string name="slt">Selected Image</string>
    <string name="etf1">Enter File Name</string>
    <string name="etf2">Enter Price</string>
    <string name="etf3">Enter Quantity</string>
    <string name="btnUpload">Upload</string>
    <string name="show">Show</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_out">Log Out</string>
    <string name="visit_store">Visit Store</string>
    <string name="lab_reports">Lab Reports</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="ppName">Product Name</string>
    <string name="ppPrice">Price</string>
    <string name="ppQuantity">Quantity</string>
    <string name="signUp">Sign UP</string>
    <string name="lodinMsg">Already have an account?  LogIn</string>
    <string name="verify_phone_no">Verify Phone Number</string>
    <string name="enter_verification_code_if_not_automatically_authenticated">Enter verification code if not automatically authenticated.</string>
    <string name="verify">Verify</string>
    <string name="otp">Enter OTP</string>
    <string name="Item_name">ITEM NAME</string>
    <string name="order_quantity">QUANTITY</string>
    <string name="order_address">ADDRESS</string>
    <string name="order_mobile">MOBILE NUMBER</string>


    <string name="item_name">Order Item</string>
    <string name="update">Update</string>
    <string name="owner">Owner</string>
    <string name="Edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="hello_there">Hello there,</string>
    <string name="welcome_back">WELCOME Back</string>

    <string name="takephoto">  Capture Image </string>
    <string name="enter_location">Enter Location</string>
    <string name="submit">send order</string>
    <string name="hintPhone">Phone number</string>
</resources>