<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logotry"
    tools:context=".cLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/AddPro"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/companyName"
            android:textAlignment="center"
            android:textColor="#102F84"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/arbutus_slab"
            android:text="@string/hello_there"
            android:textColor="#102F84"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/arbutus_slab"
            android:text="@string/welcome_back"
            android:textColor="#102F84"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/NewAccount"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/loginv"
            android:textColor="#102F84"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddPro" />

        <EditText
            android:id="@+id/phoneN"
            android:layout_width="236dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:background="@drawable/rounded_button4"
            android:ems="10"
            android:hint="@string/htphone"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="#102F84"
            android:textColorHint="@color/white"
            android:textColorLink="#102F84"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.268"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/NewAccount"
            tools:text="@string/htpass"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="238dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_button4"
            android:ems="10"
            android:hint="@string/htpass"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="#102F84"
            android:textColorHint="@color/white"
            android:textColorLink="#102F84"
            app:layout_constraintStart_toStartOf="@+id/phoneN"
            app:layout_constraintTop_toBottomOf="@+id/phoneN"
            tools:text="@string/htpass" />

        <Switch
            android:id="@+id/active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/switch101"
            android:textColor="#102F84"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
            app:layout_constraintTop_toBottomOf="@+id/Password" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/loginbutton"
            android:textColor="#FBF9F9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.876"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password" />

        <Button
            android:id="@+id/RegL"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="10dp"
            android:background="#00000000"
            android:text="@string/regLink"
            android:textAlignment="center"
            android:textColor="#102F84"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintVertical_bias="0.016" />


    </LinearLayout>








</ScrollView>